--- a/src/match_seeker/CMakeLists.txt
+++ b/src/match_seeker/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(qr_seeker)
+project(match_seeker)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
