--- a/src/match_seeker/package.xml
+++ b/src/match_seeker/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <package>
-  <name>qr_seeker</name>
+  <name>match_seeker</name>
   <version>0.0.0</version>
-  <description>The qr_seeker package</description>
+  <description>The match_seeker package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="macalester@todo.todo">macalester</maintainer>
