Ignoring large files used in floor classifier cnn

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 *~
 *.avi
 .idea/
+src/deep_learning/allfloorframes/
+src/deep_learning/floortype_cpcpfdl-1e-3_061318/
+src/deep_learning/testframes/
