Add reviewed data files 20240628 and 20240702

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ src/match_seeker/scripts/olri_classifier/paths.py
 devel/
 build/
 src/match_seeker/scripts/olri_classifier/creatingMapBackUp.py
+.editorconfig
